[package]
name = "monkey_wrench"
version = "0.1.0"
authors = ["Connor Monks <monkslc@gmail.com>"]
edition = "2018"
default-run = "mwrnch"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
phf = { version = "0.8", features = ["macros"] }

[[bin]]
name = "mwrnch"
path = "src/main.rs"
